# indiana_business_dir

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  install.ps1  install.sh  package-lock.json  package.json  run.sh
.github/workflows/: ci.yml  release.yml
data/: in_cities.json  in_zips.json
scripts/: browser_driver.js
src/: browser_driver.rs  cli.rs  counties.rs  db.rs  main.rs  models.rs  output.rs
src/scraper/: mod.rs  primary.rs  secondary.rs  tertiary.rs
